--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
   - docker build -t phoax/testk8s -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run -e CI=true USERNAME/react-test npm test
+  - docker run USERNAME/react-test npm test -- --coverage
 
 after_success:
   - docker build -t phoax/testk8s ./client
