--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,32 @@ services:
   - docker
 
 before_install:
-  - docker build -t phoax/testk8s -f ./client/Dockerfile.dev ./client
+  - docker build -t sandrocaseiro/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run USERNAME/react-test npm test -- --coverage
+  - docker run sandrocaseiro/react-test npm run ci-test
 
 after_success:
-  - docker build -t phoax/testk8s ./client
-  - docker build -t phoax/testk8s ./nginx
-  - docker build -t phoax/testk8s ./server
-  - docker build -t phoax/testk8s ./worker
+  - docker build -t sandrocaseiro/multi-client ./client
+  - docker build -t sandrocaseiro/multi-nginx ./nginx
+  - docker build -t sandrocaseiro/multi-server ./server
+  - docker build -t sandrocaseiro/multi-worker ./worker
+  #Push images to docker hub
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
+  - docker push sandrocaseiro/multi-client
+  - docker push sandrocaseiro/multi-nginx
+  - docker push sandrocaseiro/multi-server
+  - docker push sandrocaseiro/multi-worker
+
+deploy:
+  provider: elasticbeanstalk
+  region: us-west-2
+  app: multi-docker
+  env: MultiDocker-env
+  bucket_name: elasticbeanstalk-us-west-2-095094054021
+  bucket_path: docker-multi
+  on:
+    branch: master
+  access_key_id: "$AWS_ACCESS_KEY"
+  secret_access_key:
+    secure: "$AWS_SECRET_KEY"
