--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,21 @@
-version: '3'
-services:
+version: "3"
+services: 
   postgres:
-    image: 'postgres:latest'
+    image: "postgres:alpine"
+    environment: 
+      - POSTGRES_PASSWORD=12345678
   redis:
-    image: 'redis:latest'
+    image: "redis:alpine"
   nginx:
     restart: always
     build:
       dockerfile: Dockerfile.dev
       context: ./nginx
     ports:
-      - '3050:80'
+      - "15004:80"
+    depends_on: 
+      - "client"
+      - "api"
   api:
     build:
       dockerfile: Dockerfile.dev
@@ -23,16 +28,19 @@ services:
       - REDIS_PORT=6379
       - PGUSER=postgres
       - PGHOST=postgres
-      - PGDATABASE=postgres
-      - PGPASSWORD=postgres_password
+      - PGDATABASE=fibvalues
+      - PGPASSWORD=12345678
       - PGPORT=5432
+    depends_on: 
+      - "redis"
+      - "postgres"
   client:
     build:
       dockerfile: Dockerfile.dev
       context: ./client
     volumes:
       - /app/node_modules
-      - ./client:/app/
+      - ./client:/app
   worker:
     build:
       dockerfile: Dockerfile.dev
@@ -40,3 +48,8 @@ services:
     volumes:
       - /app/node_modules
       - ./worker:/app
+    environment:
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+    depends_on: 
+      - "redis"
