--- a/nginx/Dockerfile.dev
+++ b/nginx/Dockerfile.dev
@@ -1,2 +1,3 @@
-FROM nginx
-COPY ./default.conf /etc/nginx/conf.d/default.conf
+FROM nginx:alpine
+
+COPY ./default.dev.conf /etc/nginx/conf.d/default.conf
