--- a/server/Dockerfile.dev
+++ b/server/Dockerfile.dev
@@ -1,6 +1,13 @@
 FROM node:alpine
-WORKDIR '/app'
-COPY ./package.json ./
+
+WORKDIR /app
+
+COPY package.json .
+
 RUN npm install
+
 COPY . .
+
+EXPOSE 5000
+
 CMD ["npm", "run", "dev"]
