--- a/server/package.json
+++ b/server/package.json
@@ -1,14 +1,21 @@
 {
-  "dependencies": {
-    "express": "4.16.3",
-    "pg": "7.4.3",
-    "redis": "2.8.0",
-    "cors": "2.8.4",
-    "nodemon": "1.18.3",
-    "body-parser": "*"
-  },
-  "scripts": {
-    "dev": "nodemon",
-    "start": "node index.js"
-  }
+	"name": "server",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"start": "node index.js",
+		"dev": "nodemon",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"body-parser": "^1.19.0",
+		"cors": "^2.8.5",
+		"express": "^4.17.1",
+		"nodemon": "^1.19.1",
+		"pg": "^7.11.0",
+		"redis": "^2.8.0"
+	}
 }
